--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "multer": "^2.0.1",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "stripe": "^18.2.1"
   }
 }
